INSTALL(PROGRAMS
    dokx-build-package-docs
    dokx-build-search-index
    dokx-combine-html
    dokx-combine-toc
    dokx-extract-toc
    dokx-extract-markdown
    dokx-generate-html
    dokx-generate-html-index
    dokx-init
    dokx-browse
    dokx-update-from-git
    dokx-luarocks
    dokx-search
    DESTINATION bin)

